wip: refactor subsystems

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,9 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")
 add_subdirectory(vendored/SDL EXCLUDE_FROM_ALL)
 
 # Create your game executable target as usual
-add_executable(piano WIN32 piano.c)
+add_executable(piano src/main.c src/app.c src/ringbuffer.c src/audio.c src/graphics.c src/ui.c)
+
+target_include_directories(piano PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
 # Link to the actual SDL3 library.
 target_link_libraries(piano PRIVATE SDL3::SDL3 m)
